--- a/Patient.Api/Patient.Api/Components/Layout/Doctor/DoctorLayout.razor.css
+++ b/Patient.Api/Patient.Api/Components/Layout/Doctor/DoctorLayout.razor.css
@@ -10,6 +10,7 @@ body {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    background-attachment: fixed;
     width: 100vw;
     height: 100vh;
 }
