--- a/Patient.Api/Patient.Api/Components/Layout/Main/LoggingLayout.razor.css
+++ b/Patient.Api/Patient.Api/Components/Layout/Main/LoggingLayout.razor.css
@@ -7,9 +7,12 @@
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    background-attachment: fixed; 
     width: 100vw;
-    height: 100vh;
+    min-height: 100vh; 
 }
+
+    
 
 .header-logo{
     width: 100vw;
