--- a/Patient.Api/Patient.Api/Components/Layout/Main/MainLayout.razor.css
+++ b/Patient.Api/Patient.Api/Components/Layout/Main/MainLayout.razor.css
@@ -2,11 +2,12 @@ body {
     overflow-x: hidden;
 }
 
-.page{
+.page {
     background-image: url('/images/kurp2.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    background-attachment: fixed;
     width: 100vw;
     height: 100vh;
 }
