--- a/Patient.Api/Patient.Api/Components/Pages/Logging/DoctorLoggingPage.razor
+++ b/Patient.Api/Patient.Api/Components/Pages/Logging/DoctorLoggingPage.razor
@@ -16,6 +16,7 @@
 @using System.Security.Claims
 @using Patient.Domain.Constants
 @using Patient.Application.Account
+@using Patient.Api.Components.ManageComponents
 
 
 @inject NavigationManager Navigation
@@ -94,7 +95,6 @@
 
     private async Task OnLogin()
     {
-        // to trzeba ogolnie moze poprawic - jest problem ze nie dodaje claimsa z rola dlatego to tak wyglada
         var user = await _userManager.FindByEmailAsync(Input.Email);
         var resultCheckPassword = await _signInManager.CheckPasswordSignInAsync(user, Input.Password, false);
         if (user == null || !resultCheckPassword.Succeeded)
@@ -111,13 +111,8 @@
         await _signInManager.SignInWithClaimsAsync(user, Input.RememberMe, claimsPrincipal.Claims);
 
         var result = _signInManager.IsSignedIn(claimsPrincipal);
-
-        //var result = await _signInManager.PasswordSignInAsync(Input.Email, Input.Password, Input.RememberMe, lockoutOnFailure: false);
-        if(result) //result.Succedded
+        if(result) 
         {
-            //await _jsRuntime.InvokeVoidAsync("localStorage.setItem", "authToken", SecurityToken); nie wiadomo jak z tokenem
-            //token = await tokenGenerator.GenerateToken(user);
-                
             _redirectManager.RedirectTo("/lekarz");
         }
         else
