--- a/Patient.Api/Patient.Api/Components/Pages/DoctorPages/MainPanel/AdditionalComponents/DoctorsPatientsComponent.razor
+++ b/Patient.Api/Patient.Api/Components/Pages/DoctorPages/MainPanel/AdditionalComponents/DoctorsPatientsComponent.razor
@@ -4,7 +4,7 @@
 @inject IPatientsRepository _patientsRepository
 
 <div class="container pt-3">
-    <h3 style="color: white;" class="ma-3">Twoi lekarze</h3>
+    <h3 style="color: white;" class="ma-3">Twoi Pacjenci</h3>
     <section>     
         <MudPaper Class="ma-3 summary-item" Elevation="3">
             <MudList T="Patient.Domain.Entities.Actors.Doctor" Class="pt-5">
