--- a/Patient.Api/Patient.Api/Components/Pages/DoctorPages/Reports/Reports.razor
+++ b/Patient.Api/Patient.Api/Components/Pages/DoctorPages/Reports/Reports.razor
@@ -29,9 +29,7 @@
         <div class="list-group pt-5">
             @if (readingReports)
             {
-                <div class="spinner-border" role="status">
-                    <span class="visually-hidden">Loading...</span>
-                </div>
+                <MudProgressCircular Color="Color.Primary" Indeterminate="true"/>
             }
 
             @if (filesGet)
@@ -61,9 +59,11 @@
             }
             else
             {
-                <div>
-                    Brak raportow do wyswietlenia
-                </div>
+                <MudPaper Class="pa-4 ma-3 summary-item" Elevation="3" Style="cursor: pointer;">
+                    <div>
+                        Brak raportow do wyswietlenia
+                    </div>
+                </MudPaper>                
             }
             
         </div>
@@ -86,10 +86,10 @@
     protected async override Task OnInitializedAsync()
     {
         readingReports = true;
-        var reportsToShow = await _doctorApiService.GetReports(tokenSource.Token);
+        reportsToShow = await _doctorApiService.GetReports(tokenSource.Token);
         if (reportsToShow.Count > 0) { filesGet = true; }
-        StateHasChanged();
         readingReports = false;
+        StateHasChanged();
     }
 
     private async void HandleShowReportPreview(ReportForDoctorDto report)
